NPE optimizer with simple case operator